   * Add first, last, play and back buttons to storyscreens
   * Remember recall list sorting order (FR #16149)
   * accelerated movment speed to 200ms per hex
   * --logdomains accepts a filter argument and uses multiline output
   * New mouseover image instead of simply highlighting the hex
   * Tab completion for :commands and units search function
 * WML Engine:
   * Deprecated [set_variable]'s random key, use rand instead
   * Renamed [unit][status] healable to unhealable so it can default to 'no'
   * Added 'side X turn refresh' and 'side X turn Y refresh' events
   * Add ~DARKEN() counterpart to ~BRIGHTEN()
   * Implement min_value for [illuminates]
   * Added lua functions wesnoth.get_side_count() and wesnoth.is_enemy(a,b)
   * Add 'recall_cost' key for [side], to override [game_config]'s default
   * Add [replace_schedule] tag, which replaces the time of day schedule
   * Trying to include a missing macro/file is now a fatal error
   * Added #ifhave/#ifnhave for testing existence of files and directories
   * Added [volume] tag, which allows game volume to be changed during scenarios
   * Added ON_DIFFICULTY, a macro that makes using different values based on
     difficulty simpler
   * Prototype support for [set_global_variable]
   * Prototype support for [get_global_variable]
   * Prototype support for [clear_global_variable]
   * Added scroll_to_leader attribute to side tag.
     Default value is 'yes' (bug #15921)
   * Draw the map border over _off^_usr tiles too.
   * Add 'immutable' key to [label], defaulting to true (feature #16078)
   * Added search_recall_list key to [have_unit] tag
   * Added [move_units_fake] tag
   * Added reveal_map key to [endlevel] tag
   * Rename all "colour" keys to "color" (in [side] and [label]), same for
     "colour_lock"
   * Allow a [case] value to take comma-separated values
   * Allow to use local ToD terrain variants in [time_area]
   * Move fog/shroud image definition into game_config.cfg