@@ -1489,7 +1489,9 @@ void connect::lists_init()
 			if(itor == team_names_.end()) {
 				team_names_.push_back(team_name);
 				user_team_names_.push_back(user_team_name.t_str().to_serialized());
-				player_teams_.push_back(user_team_name.str());
+				if (side["allow_player"].to_bool(true)) {
+					player_teams_.push_back(user_team_name.str());
+				}
 			}
 			++side_num;
 		}
@@ -1515,7 +1517,9 @@ void connect::lists_init()
 
 			team_names_.push_back(side_num);
 			user_team_names_.push_back(team_prefix_ + side_num);
-			player_teams_.push_back(team_prefix_ + side_num);
+			if (side["allow_player"].to_bool(true)) {
+				player_teams_.push_back(team_prefix_ + side_num);
+			}
 			++_side_num;
 		}
 	}
