@@ -162,6 +162,7 @@ Version 1.9.0-svn:
    * --logdomains accepts a filter argument and uses multiline output
    * New mouseover image instead of simply highlighting the hex
    * Tab completion for :commands and units search function
+   * Fixed #15781: On maps with statues player can pick statues team
  * WML Engine:
    * Deprecated [set_variable]'s random key, use rand instead
    * Renamed [unit][status] healable to unhealable so it can default to 'no'
